feat: preliminary data validation for timetables
